<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lin_top"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="@color/colorPeterRiver"
    android:orientation="vertical"
    android:padding="@dimen/dimen24"
    tools:context=".Main.HomeActivity">


    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_child_friendly" />

    <TextView
        android:id="@+id/txt_tagline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginStart="@dimen/dimen12"
        android:layout_marginLeft="@dimen/dimen12"
        android:layout_toRightOf="@id/img_logo"
        android:text="@string/tagline"
        android:textSize="@dimen/dimen20"
        android:textColor="@android:color/white"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/txt_tagline_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen5"
        android:layout_marginStart="@dimen/dimen12"
        android:layout_marginLeft="@dimen/dimen12"
        android:layout_toRightOf="@id/img_logo"
        android:layout_below="@id/txt_tagline"
        android:text="@string/tagline_desc"
        android:textSize="@dimen/dimen14"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/txtHallo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_tagline_desc"
        android:layout_marginStart="@dimen/dimen50"
        android:layout_marginLeft="@dimen/dimen50"
        android:layout_marginTop="@dimen/dimen30"
        android:layout_marginEnd="@dimen/dimen50"
        android:layout_marginRight="@dimen/dimen50"
        android:gravity="center"
        android:text="@string/hallo"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font16"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtHallo"
        android:layout_marginStart="@dimen/dimen50"
        android:layout_marginLeft="@dimen/dimen50"
        android:layout_marginEnd="@dimen/dimen50"
        android:layout_marginRight="@dimen/dimen50"
        android:gravity="center"
        android:text="@string/nama_kamu"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font16"
        android:textStyle="bold" />
    <View
        android:layout_below="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen3"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dimen120"
        android:layout_marginLeft="@dimen/dimen120"
        android:layout_marginTop="@dimen/dimen10"
        android:layout_marginEnd="@dimen/dimen120"
        android:layout_marginRight="@dimen/dimen120"
        android:background="#ffffff" />

    <TextView

        android:id="@+id/txt_logout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen40"
        android:layout_marginStart="@dimen/dimen50"
        android:layout_marginLeft="@dimen/dimen50"
        android:layout_marginTop="@dimen/dimen20"
        android:layout_marginEnd="@dimen/dimen50"
        android:layout_marginRight="@dimen/dimen50"
        android:background="@drawable/bg_btn_masuk"
        android:clickable="true"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:text="@string/keluar"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />
</RelativeLayout>